# ReasoningJudge

./: README.md  deep_thoughts.md  final_review.md  improved_thoughts.md  judge_feedback.md  pyproject.toml
src/reasoningjudge1/: crew.py  main.py
src/reasoningjudge1/config/: agents.yaml  tasks.yaml
