[project]
name = "reasoningjudge1"
version = "0.1.0"
description = "reasoningjudge1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
reasoningjudge1 = "reasoningjudge1.main:run"
run_crew = "reasoningjudge1.main:run"
train = "reasoningjudge1.main:train"
replay = "reasoningjudge1.main:replay"
test = "reasoningjudge1.main:test"
run_with_trigger = "reasoningjudge1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
